# uClementineRemote

./: CMakeLists.txt  README.md  fr.po  manifest.json.in
app/: ButtonSvg.qml  CMakeLists.txt  CurrentSong.qml  DownloadManager.qml  Main.qml  SearchPage.qml  SlideView.qml  uClementineRemote.desktop.in
app/tests/autopilot/: run
app/tests/autopilot/uClementineRemote/tests/: __init__.py  test_main.py
backend/: CMakeLists.txt
backend/modules/UClementineRemote/: artimageprovider.cpp  artimageprovider.h  backend.cpp  backend.h  clementineproxy.cpp  clementineproxy.h  filedownloader.cpp  filedownloader.h  playlist.cpp  playlist.h  playlists.cpp  playlists.h  qmldir  song.cpp  song.h  templates.h
backend/modules/UClementineRemote/pb/: remotecontrolmessages.proto
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: uclementineremote.blackjohnny.pot
